package edu.hitsz.bullet

/**
 * @author chiro2001
 */
class HeroBullet(locationXInit: Int, locationYInit: Int, speedX: Int, speedY: Int, power: Int)
  extends AbstractBullet(locationXInit, locationYInit, speedX, speedY, power)